# superprint

./: .gitignore  AGENTS.md  package-lock.json  package.json
.ai/documents/: wechat-user-binding-plan.md  weixin-jssdk-close-window.md
.ai/skills/: generate-api-docs.skill.md
.ai/skills/wecom-api/: SKILL.md
.github/workflows/: build.yml
.trae/rules/: project_rules.md
api/: .gitignore  index.ts  package-lock.json  package.json  tsconfig.json
api/scripts/: copy-types.js
printdriver/: .gitignore  CMakeLists.txt  build.bat  vcpkg.json
printdriver-quickwin/: main.dev.js  main.js  optimizations.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
printdriver-quickwin/scripts/: postbuild.js
printdriver-quickwin/src/: App.tsx  api.ts  config.ts  device.ts  entry.ts  hash-worker.ts  install.ts  logger.ts  main.tsx  print-queue.ts  print-worker.ts  printer.ts  qr.ts  storage.ts  types.d.ts  update.ts  utils.ts  worker-types.ts  worker-url.d.ts  ws.ts
printdriver-quickwin/src/components/: InstallApp.tsx  LoginForm.tsx  PrintersTab.tsx  QRCode.tsx  QRTestTab.tsx  SettingsTab.tsx  UninstallApp.tsx
printdriver/installer/: PrintDriver.iss
printdriver/scripts/: build-exe.bat  build-installer.bat  build-setup.bat  create-cert.ps1  gen-json.ps1  sign-exe.ps1
printdriver/src/: config.h  file_downloader.c  http_client.c  login_dlg.c  main.c  print_core.c  print_core.h  print_job.c  print_job.h  print_task.c  print_task.h  resource.rc  setup.c  ui.c  ui.h  updater.c  updater.h  version.h  websocket.c  websocket.h
server/: index.ts  logger.ts  main.ts  nodeAdapter.ts  package-lock.json  package.json  tsconfig.json
server/api/: ai.ts  auth.ts  computer.ts  constants.local.d.ts  constants.ts  docProcess.ts  files.ts  global.ts  handler.ts  index.ts  pdfConvert.ts  pdfToWord.ts  printJob.ts  printTask.ts  uploadStatic.ts  user.ts  utils.ts  version.ts
server/api/weixin/: callback.ts  download.ts  index.ts  message.ts  send.ts  sync.ts  token.ts
server/assets/: 文件处理.docx
server/models/: index.ts  models.prisma
server/scripts/: gen_model_types.cjs  migrate_rename_print_models.ts  static.ts
server/ws/: index.ts
web/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx
web/src/components/: PdfPreview.tsx
web/src/pages/: Login.tsx  PrintJobDetail.tsx  PrintTaskDetail.tsx
